--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
     "express": "^4.17.1",
     "nodemon": "^2.0.2",
     "puppeteer": "^2.1.1"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
